# bluesify

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md  import_pipeline.md
docs/case_studies/: README.md  geudaeman_itdamyeon.md
docs/rules/: README.md
docs/theory/: README.md  chord_tensions.md
examples/case_studies/: README.md  geudaeman-itdamyeon-c-harmony.musicxml
examples/representative/: README.md
src/bluesify/: __init__.py  cli.py
src/bluesify/analysis/: __init__.py  key.py  tensions.py
src/bluesify/arranger/: __init__.py  solo.py
src/bluesify/core/: __init__.py  chords.py  score.py  types.py
src/bluesify/grooves/: __init__.py  base.py
src/bluesify/render/: __init__.py  pdf.py
src/bluesify/voicings/: __init__.py  base.py  drop2.py  rootless.py  shell.py
src/bluesify/web/: __init__.py  app.py
src/bluesify/web/static/: app.js  index.html  styles.css
tests/: test_analysis_key.py  test_arranger_level2.py  test_arranger_measure_duration.py  test_chords.py  test_smoke.py  test_styles.py  test_tensions.py  test_voicings.py
tests/fixtures/: canonical_leadsheet.musicxml
